# NetworkChat

ClientGUI/: Button.cpp  Button.hpp  CMakeLists.txt  InputBox.cpp  InputBox.hpp  Menu.cpp  Menu.hpp  Message.cpp  Message.hpp  Messages.cpp  Messages.hpp  TCPClient.cpp  TCPClient.hpp  main.cpp
ClientGUI/config/: ClientMenu  MainMenu
ClientGUI/fonts/eight_bits_unicode/: license.txt  readme.txt
ClientGUI/fonts/truetype/: info.txt
Server/: CMakeLists.txt  TCPServer.cpp  TCPServer.hpp  main.cpp
